// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccordionItem /> one call onToggleExpanded event 1`] = `
<WithTheme(AccordionItem)
  contentBlank={false}
  expanded={false}
  headerSlot={null}
  id={null}
  onToggleExpanded={[Function]}
  title=""
>
  <AccordionItem
    contentBlank={false}
    expanded={false}
    headerSlot={null}
    id={null}
    onToggleExpanded={[Function]}
    theme={
      Object {
        "reactackle": Object {
          "baseModule": 8,
          "body": Object {
            "backgroundColor": "#ffffff",
            "fontColor": "#212121",
            "fontColorAlt": "#ffffff",
            "fontFamily": "sansSerif",
            "fontWeight": "400",
            "lineHeight": 1.5,
          },
          "breakpoints": Object {
            "large": "80em",
            "medium": "60em",
            "small": "30em",
            "xlarge": "90em",
            "xsmall": "0",
            "xxlarge": "120em",
          },
          "breakpointsEmBase": 16,
          "color": Object {
            "alert": "#f04124",
            "alertFgTextColor": "#ffffff",
            "black": "#000000",
            "error": "#f04124",
            "errorFgTextColor": "#ffffff",
            "info": "#d9edf7",
            "infoFgTextColor": "#212121",
            "main": "#2196F3",
            "mainFgTextColor": "#ffffff",
            "secondary": "#673AB7",
            "secondaryFgTextColor": "#ffffff",
            "success": "#43AC6A",
            "successFgTextColor": "#ffffff",
            "transparent": "hsla(0, 0%, 100%, 0)",
            "warning": "#f0b900",
            "warningFgTextColor": "#212121",
            "white": "#ffffff",
          },
          "colorAnchor": "#208dcc",
          "colorBorder": "#e0e0e0",
          "colorBrand": Object {
            "facebook": "#3b5998",
            "googlePlus": "#dd4b39",
            "vkontakte": "#45668e",
          },
          "colorPaletteGrey": Object {
            "100": "#f5f5f5",
            "200": "#eeeeee",
            "300": "#e0e0e0",
            "400": "#bdbdbd",
            "50": "#fafafa",
            "500": "#9e9e9e",
            "600": "#757575",
            "700": "#616161",
            "75": "#f7f7f7",
            "800": "#424242",
            "900": "#212121",
          },
          "components": Object {
            "accordion": Object {
              "item": Object {
                "content": Object {
                  "animatedOffset": -20,
                  "paddingX": 16,
                  "paddingY": 12,
                },
                "expandIcon": Object {
                  "collapsed": Object {
                    "iconElement": <IconArrowChevronRight
                      color="currentColor"
                      size="custom"
      />,
                    "opacity": 0.7,
                    "rotateDegree": 0,
                  },
                  "expanded": Object {
                    "iconElement": <IconArrowChevronRight
                      color="currentColor"
                      size="custom"
      />,
                    "opacity": 1,
                    "rotateDegree": "90deg",
                  },
                  "height": 24,
                  "imgHeight": 20,
                  "imgWidth": null,
                  "width": null,
                },
                "title": Object {
                  "align": "top",
                  "collapsed": Object {
                    "backgroundColor": "#ffffff",
                    "color": "#212121",
                    "focus": Object {
                      "backgroundColor": "#f7f7f7",
                      "opacity": 1,
                    },
                    "fontSize": 12,
                    "fontWeight": "400",
                    "hover": Object {
                      "backgroundColor": "#fafafa",
                      "opacity": 1,
                    },
                    "lineHeight": 1.5,
                    "opacity": 0.7,
                    "paddingBottom": 8,
                    "paddingLeft": 16,
                    "paddingTop": 8,
                    "textTransform": "uppercase",
                  },
                  "expanded": Object {
                    "backgroundColor": "#ffffff",
                    "color": "#212121",
                    "focus": Object {
                      "backgroundColor": "#f7f7f7",
                      "opacity": 1,
                    },
                    "fontSize": 12,
                    "fontWeight": "600",
                    "hover": Object {
                      "backgroundColor": "#fafafa",
                      "opacity": 1,
                    },
                    "lineHeight": 1.5,
                    "opacity": 1,
                    "paddingBottom": 8,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 8,
                    "textTransform": "uppercase",
                  },
                  "minHeight": 34,
                },
              },
              "separator": Object {
                "color": "#e0e0e0",
                "style": "solid",
                "thickness": 1,
              },
            },
          },
          "contentWidth": 1360,
          "direction": Object {
            "float": "left",
            "text": "ltr",
          },
          "fontColor": Object {
            "light": "#e0e0e0",
            "medium": "#9e9e9e",
          },
          "fontFamily": Object {
            "monospace": "Consolas, Liberation Mono, Courier, monospace",
            "sansSerif": "Open Sans, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif",
            "serif": "Georgia, Cambria, Times New Roman, Times, serif",
          },
          "fontSize": Object {
            "-1": 12,
            "-2": 10,
            "0": 13,
            "1": 15,
            "2": 18,
            "3": 24,
            "4": 34,
            "5": 45,
            "6": 56,
            "7": 112,
          },
          "fontWeight": Object {
            "bold": "700",
            "light": "400",
            "normal": "400",
            "semibold": "600",
          },
          "radiusDefault": 2,
          "radiusRounded": 1000,
          "totalColumns": 12,
          "zIndex": Object {
            "alertDesktop": 9000,
            "alertMobile": 5000,
            "base": 1,
            "dropdown": 7000,
            "modal": 8500,
            "moon": 9999,
            "nav": 500,
            "overlay": 8000,
            "popup": 8700,
            "tooltip": 9990,
          },
        },
      }
    }
    title=""
  >
    <HeadingStyled
      key="heading"
      role="heading"
    >
      <dt
        className="HeadingStyled-jcCngC diMfOQ"
        role="heading"
      >
        <TitleBoxStyled
          aria-controls={null}
          aria-expanded={false}
          expanded={false}
          id="labelfornull"
          onClick={[Function]}
          role="button"
        >
          <button
            aria-controls={null}
            aria-expanded={false}
            className="TitleBoxStyled-QGbRI bwRMmk"
            id="labelfornull"
            onClick={[Function]}
            role="button"
          >
            <TitleContentStyled>
              <div
                className="TitleContentStyled-eVpLoT bzPKhr"
              />
            </TitleContentStyled>
            <IconExpandWrapperStyled>
              <div
                className="IconExpandWrapperStyled-jsDvvw cHZrOx"
              >
                <IconWrapperStyled
                  expanded={false}
                >
                  <div
                    className="IconWrapperStyled-hDFZgP iRWScr"
                  >
                    <IconArrowChevronRight
                      color="currentColor"
                      size="custom"
                    >
                      <IconSvg
                        backgroundColor=""
                        border={false}
                        borderWidth={0}
                        color="currentColor"
                        colorScheme="default"
                        flip="none"
                        rotate={0}
                        rounded={false}
                        size="custom"
                      >
                        <IconStyled
                          backgroundColor=""
                          border={false}
                          borderWidth={0}
                          color=""
                          colorScheme="default"
                          customColor="currentColor"
                          flip="none"
                          rotate={0}
                          rounded={false}
                          size="normal"
                          sizeKey="custom"
                        >
                          <div
                            className="IconSvgStyled-cegYAl gxFYyV"
                            color=""
                            rotate={0}
                            size="normal"
                          >
                            <svg
                              viewBox="0 0 24 24"
                            >
                              <polygon
                                points="9.7,5.8 8.3,7.2 13.1,12 8.3,16.8 9.7,18.2 15.9,12"
                              />
                            </svg>
                          </div>
                        </IconStyled>
                      </IconSvg>
                    </IconArrowChevronRight>
                  </div>
                </IconWrapperStyled>
              </div>
            </IconExpandWrapperStyled>
          </button>
        </TitleBoxStyled>
      </dt>
    </HeadingStyled>
    <ContentStyled
      aria-labelledby="labelfornull"
      contentBlank={false}
      expanded={false}
      id={null}
      key="content"
      role="region"
    >
      <dd
        aria-labelledby="labelfornull"
        className="ContentStyled-dbeIsI dSVNGC"
        id={null}
        role="region"
      />
    </ContentStyled>
  </AccordionItem>
</WithTheme(AccordionItem)>
`;

exports[`<AccordionItem /> renders correctly with contentBlank prop set to true 1`] = `
Array [
  <dt
    className="HeadingStyled-jcCngC diMfOQ"
    role="heading"
>
    <button
        aria-controls={null}
        aria-expanded={false}
        className="TitleBoxStyled-QGbRI bwRMmk"
        id="labelfornull"
        onClick={[Function]}
        role="button"
    >
        <div
            className="TitleContentStyled-eVpLoT bzPKhr"
        >
            
        </div>
        <div
            className="IconExpandWrapperStyled-jsDvvw cHZrOx"
        >
            <div
                className="IconWrapperStyled-hDFZgP iRWScr"
            >
                <div
                    className="IconSvgStyled-cegYAl gxFYyV"
                    color=""
                    rotate={0}
                    size="normal"
                >
                    <svg
                        viewBox="0 0 24 24"
                    >
                        <polygon
                            points="9.7,5.8 8.3,7.2 13.1,12 8.3,16.8 9.7,18.2 15.9,12"
                        />
                    </svg>
                </div>
            </div>
        </div>
    </button>
</dt>,
  <dd
    aria-labelledby="labelfornull"
    className="ContentStyled-dbeIsI fgXauG"
    id={null}
    role="region"
/>,
]
`;

exports[`<AccordionItem /> renders correctly with default props 1`] = `
Array [
  <dt
    className="HeadingStyled-jcCngC diMfOQ"
    role="heading"
>
    <button
        aria-controls={null}
        aria-expanded={false}
        className="TitleBoxStyled-QGbRI bwRMmk"
        id="labelfornull"
        onClick={[Function]}
        role="button"
    >
        <div
            className="TitleContentStyled-eVpLoT bzPKhr"
        >
            
        </div>
        <div
            className="IconExpandWrapperStyled-jsDvvw cHZrOx"
        >
            <div
                className="IconWrapperStyled-hDFZgP iRWScr"
            >
                <div
                    className="IconSvgStyled-cegYAl gxFYyV"
                    color=""
                    rotate={0}
                    size="normal"
                >
                    <svg
                        viewBox="0 0 24 24"
                    >
                        <polygon
                            points="9.7,5.8 8.3,7.2 13.1,12 8.3,16.8 9.7,18.2 15.9,12"
                        />
                    </svg>
                </div>
            </div>
        </div>
    </button>
</dt>,
  <dd
    aria-labelledby="labelfornull"
    className="ContentStyled-dbeIsI dSVNGC"
    id={null}
    role="region"
/>,
]
`;

exports[`<AccordionItem /> renders correctly with expanded id to number 1`] = `
Array [
  <dt
    className="HeadingStyled-jcCngC diMfOQ"
    role="heading"
>
    <button
        aria-controls={1}
        aria-expanded={false}
        className="TitleBoxStyled-QGbRI bwRMmk"
        id="labelfor1"
        onClick={[Function]}
        role="button"
    >
        <div
            className="TitleContentStyled-eVpLoT bzPKhr"
        >
            
        </div>
        <div
            className="IconExpandWrapperStyled-jsDvvw cHZrOx"
        >
            <div
                className="IconWrapperStyled-hDFZgP iRWScr"
            >
                <div
                    className="IconSvgStyled-cegYAl gxFYyV"
                    color=""
                    rotate={0}
                    size="normal"
                >
                    <svg
                        viewBox="0 0 24 24"
                    >
                        <polygon
                            points="9.7,5.8 8.3,7.2 13.1,12 8.3,16.8 9.7,18.2 15.9,12"
                        />
                    </svg>
                </div>
            </div>
        </div>
    </button>
</dt>,
  <dd
    aria-labelledby="labelfor1"
    className="ContentStyled-dbeIsI dSVNGC"
    id={1}
    role="region"
/>,
]
`;

exports[`<AccordionItem /> renders correctly with expanded id to string 1`] = `
Array [
  <dt
    className="HeadingStyled-jcCngC diMfOQ"
    role="heading"
>
    <button
        aria-controls="testId"
        aria-expanded={false}
        className="TitleBoxStyled-QGbRI bwRMmk"
        id="labelfortestId"
        onClick={[Function]}
        role="button"
    >
        <div
            className="TitleContentStyled-eVpLoT bzPKhr"
        >
            
        </div>
        <div
            className="IconExpandWrapperStyled-jsDvvw cHZrOx"
        >
            <div
                className="IconWrapperStyled-hDFZgP iRWScr"
            >
                <div
                    className="IconSvgStyled-cegYAl gxFYyV"
                    color=""
                    rotate={0}
                    size="normal"
                >
                    <svg
                        viewBox="0 0 24 24"
                    >
                        <polygon
                            points="9.7,5.8 8.3,7.2 13.1,12 8.3,16.8 9.7,18.2 15.9,12"
                        />
                    </svg>
                </div>
            </div>
        </div>
    </button>
</dt>,
  <dd
    aria-labelledby="labelfortestId"
    className="ContentStyled-dbeIsI dSVNGC"
    id="testId"
    role="region"
/>,
]
`;

exports[`<AccordionItem /> renders correctly with expanded prop set to true 1`] = `
Array [
  <dt
    className="HeadingStyled-jcCngC diMfOQ"
    role="heading"
>
    <button
        aria-controls={null}
        aria-expanded={true}
        className="TitleBoxStyled-QGbRI CKANW"
        id="labelfornull"
        onClick={[Function]}
        role="button"
    >
        <div
            className="TitleContentStyled-eVpLoT bzPKhr"
        >
            
        </div>
        <div
            className="IconExpandWrapperStyled-jsDvvw cHZrOx"
        >
            <div
                className="IconWrapperStyled-hDFZgP kFJCnu"
            >
                <div
                    className="IconSvgStyled-cegYAl gxFYyV"
                    color=""
                    rotate={0}
                    size="normal"
                >
                    <svg
                        viewBox="0 0 24 24"
                    >
                        <polygon
                            points="9.7,5.8 8.3,7.2 13.1,12 8.3,16.8 9.7,18.2 15.9,12"
                        />
                    </svg>
                </div>
            </div>
        </div>
    </button>
</dt>,
  <dd
    aria-labelledby="labelfornull"
    className="ContentStyled-dbeIsI dtCAup"
    id={null}
    role="region"
/>,
]
`;

exports[`<AccordionItem /> renders correctly with title to string 1`] = `
Array [
  <dt
    className="HeadingStyled-jcCngC diMfOQ"
    role="heading"
>
    <button
        aria-controls={null}
        aria-expanded={false}
        className="TitleBoxStyled-QGbRI bwRMmk"
        id="labelfornull"
        onClick={[Function]}
        role="button"
    >
        <div
            className="TitleContentStyled-eVpLoT bzPKhr"
        >
            <div
                className="TitleStyled-kOmUSD bmgLyZ"
            >
                hello
            </div>
        </div>
        <div
            className="IconExpandWrapperStyled-jsDvvw cHZrOx"
        >
            <div
                className="IconWrapperStyled-hDFZgP iRWScr"
            >
                <div
                    className="IconSvgStyled-cegYAl gxFYyV"
                    color=""
                    rotate={0}
                    size="normal"
                >
                    <svg
                        viewBox="0 0 24 24"
                    >
                        <polygon
                            points="9.7,5.8 8.3,7.2 13.1,12 8.3,16.8 9.7,18.2 15.9,12"
                        />
                    </svg>
                </div>
            </div>
        </div>
    </button>
</dt>,
  <dd
    aria-labelledby="labelfornull"
    className="ContentStyled-dbeIsI dSVNGC"
    id={null}
    role="region"
/>,
]
`;
